# EnSysMod

./: .buildinfo  .flake8  .gitignore  .gitlab-ci.yml  .ruff.toml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  datamodel.html  endpoints.html  genindex.html  http-routingtable.html  index.html  objects.inv  projectStructure.html  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  search.html  searchindex.js  setup.cfg  setup.py  usage.html  userguide.html
.github/: FIRST_ISSUE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/template/: CONTRIBUTING.md  README.md  setup.py
.github/workflows/: main.yml  pull-request-done.yml  pull-request.yml  release-branch-create.yml  template-use.yml
_modules/: index.html
_sources/: datamodel.rst.txt  endpoints.rst.txt  index.rst.txt  usage.rst.txt
_sources/usage/: 2_dataset.rst.txt
_sources/userguide/: authentication.rst.txt  dataset.rst.txt  how_to_use.rst.txt
counter/: __init__.py  __main__.py  app.py
counter/api/: __init__.py  api.py  deps.py
counter/core/: __init__.py  config.py  security.py
counter/crud/: base.py  user.py
counter/database/: init_db.py  session.py
counter/model/: __init__.py  user.py
counter/schemas/: __init__.py
datamodel/: dataset.html  energy_model.html
datamodel/dataset/: dataset.html  energy_commodity.html  energy_conversion.html  energy_sink.html  energy_source.html  energy_storage.html  energy_transmission.html  excel_data.html  region.html  time_series_data.html
datamodel/energymodel/: energy_model.html  energy_model_optimization_parameters.html  energy_model_override_parameters.html  energy_model_parameters.html
docs/source/: api.rst  conf.py  datamodel.rst  endpoints.rst  index.rst  modelUser.rst  projectStructure.rst  usage.rst  userguide.rst
ensysmod/: __init__.py  __main__.py  app.py
ensysmod/api/: api.py  deps.py  permissions.py
ensysmod/core/: config.py  file_download.py  file_folder_types.py  file_upload.py  fine_esm.py  security.py
ensysmod/crud/: __init__.py  base.py  base_depends_component.py  base_depends_component_region.py  base_depends_dataset.py  base_depends_excel.py  base_depends_matrix.py  base_depends_region_matrix.py  base_depends_region_x_region_matrix.py  base_depends_timeseries.py  base_depends_timeseries_matrix.py  capacity.py  capacity_fix.py  capacity_max.py  capacity_min.py  consumption.py  dataset.py  dataset_permission.py  energy_commodity.py  energy_component.py  energy_conversion.py  energy_conversion_factor.py  energy_model.py  energy_model_optimization.py  energy_model_override.py  energy_model_parameter.py  energy_sink.py  energy_source.py  energy_storage.py  energy_transmission.py  energy_transmission_distance.py  energy_transmission_loss.py  generation.py  operation_rate_fix.py  operation_rate_max.py  region.py  transmission_distance.py  transmission_loss.py  ts_capacity_fix.py  ts_capacity_max.py  (+8 more)
ensysmod/database/: __init__.py  base_class.py  base_class_timeseries.py  init_db.py  ref_base_class.py  session.py  ts_base_class.py
ensysmod/model/: __init__.py  capacities.py  capacity.py  capacity_fix.py  capacity_max.py  capacity_min.py  consumption.py  consumptions.py  dataset.py  dataset_permission.py  energyConversions.py  energySinks.py  energy_commodity.py  energy_component.py  energy_conversion.py  energy_conversion_factor.py  energy_model.py  energy_model_optimization.py  energy_model_override.py  energy_model_parameter.py  energy_sink.py  energy_source.py  energy_storage.py  energy_transmission.py  energy_transmission_distance.py  energy_transmission_loss.py  generation.py  generations.py  operation_rate_fix.py  operation_rate_max.py  region.py  regions.py  transmission_distance.py  transmission_loss.py  ts_capacity.py  ts_capacity_fix.py  ts_capacity_max.py  ts_capacity_min.py  ts_consumption.py  ts_generation.py  (+7 more)
ensysmod/schemas/: __init__.py  base_ref_component_region.py  base_schema.py  capacity.py  capacity_fix.py  capacity_max.py  capacity_min.py  consumption.py  dataset.py  dataset_permission.py  energy_commodity.py  energy_component.py  energy_conversion.py  energy_conversion_factor.py  energy_model.py  energy_model_optimization.py  energy_model_override.py  energy_model_parameter.py  energy_sink.py  energy_source.py  energy_storage.py  energy_transmission.py  energy_transmission_distance.py  energy_transmission_loss.py  file_upload.py  generation.py  operation_rate_fix.py  operation_rate_max.py  region.py  token.py  transmission_distance.py  transmission_loss.py  ts_capacity.py  ts_capacity_fix.py  ts_capacity_max.py  ts_capacity_min.py  ts_consumption.py  ts_operation_rate_fix.py  ts_operation_rate_max.py  ts_yearly_full_load_hour_max.py  (+4 more)
scripts/: docs.sh  install.sh  lint.sh  release.sh  run.sh  test.sh
tests/: __init__.py  conftest.py
tests/utils/: utils.py  (+2 more)
usage/: 1_installation.html  2_dataset.html  3_model.html  execute.html  output.html
userguide/: authentication.html  dataset.html  how_to_use.html  model.html  optimization.html
(+346 files in other folders)
